# A-MAZE-ing-maze-things

./: README.md  dfs.py  hunt_and_kill.py  kruskals.py  main.py  plot_render_times.py  render.py  render_times.txt
v1/: README.md  kruskals.py  main.py  prims.py  render_times.txt
v2/: CMakeLists.txt  cell.h  constants.h  distance_animation_to_mp4.py  image_utils.cpp  image_utils.h  main.cpp  maze_utils.cpp  maze_utils.h
v3/: gigachad.cpp
v4/: main.cpp
v4/MetalStuff/: main.py  maze_kernel.metal
v4/MetalStuff/f7bb0cdd26c018f40052f9944fc5c679/: MyMetalKernel.py
